# gradpulse

./: .gitattributes  .gitignore  .pydocstyle  API_REFERENCE.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  FILEMAP.md  LICENSE  README.md  RESULTS.md  RUN_GUI.bat  plan.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
examples/: README.md  benchmark_vs_c3.py  benchmark_vs_qutip_qtrl.py  braket_export.py  coupler_in_loop_cz.py  decoherence_in_the_loop.py  export_openpulse.py  filter_function.py  gradient_checkpointing.py  hardware_in_the_loop.py  leakage_in_the_loop.py  make_paper_figure.py  make_validation_figure.py  mps_large_register.py  optimize_cross_resonance.py  optimize_cz.py  optimize_from_calibration.py  optimize_iswap.py  optimize_multiqubit.py  optimize_robust.py  optimize_spectral.py  randomized_benchmarking.py  robustness_sweep.py  simultaneous_gates.py  spectator_crosstalk.py  stehlik_2021_table1.json  stehlik_predict_vs_measured.py  unitarity_rb.py  validate_against_literature.py  validation_checks.py  validation_sweep.py
examples/anchors/: README.md  marxer_2023_cz.json  stehlik_2021_cz.json  sung_2021_cz.json
examples/cepheus/: cepheus_calibration_snapshot.json  cepheus_closed_loop_cal.py  cepheus_consistent_recheck.py  cepheus_convergence_check.py  cepheus_coupler_characterization.py  cepheus_coupler_only_ceiling.py  cepheus_coupler_param_sweep.py  cepheus_cz_active_ns.json  cepheus_cz_durations.json  cepheus_cz_shape.npy  cepheus_cz_std_errors.json  cepheus_faithful_model.py  cepheus_grape_floor_pairs.py  cepheus_grape_sweep_all.py  cepheus_grape_sweep_realdur.json  cepheus_irb_1625_levelA.json  cepheus_irb_resolution_study.py  cepheus_lowerbound_scatter.py  cepheus_peak_cal_study.py  cepheus_predict_vs_measured.py  cepheus_realdur_check.py  cepheus_rebuild_levelb_pulse.py  cepheus_scout_peak.json  cepheus_sigma_validation.py  cepheus_speed_headroom.py  cepheus_stage1_peak.json  levelb_pulse_benchmark_offline.py  run_irb_on_braket.py
examples/data/: rigetti_cepheus_calibration.json
examples/notebooks/: 01_intro_cz.ipynb  02_real_device.ipynb  03_hardware_validation.ipynb
front-end/: main.py
front-end/core/: worker.py
front-end/ui/: main_window.py
front-end/ui/components/: log_console.py  mpl_widget.py
front-end/ui/panels/: advanced_panel.py  analysis_panel.py  calibration_panel.py  device_profiles_panel.py  (+5 more)
src/gradpulse/: __init__.py  __main__.py  _device.py  analysis.py  basis.py  benchmark.py  braket_bridge.py  compression.py  convenience.py  crossresonance.py  diagnostics.py  distortion.py  dlp.py  hardware.py  headtohead.py  liouville.py  literature.py  microscheduler.py  mitigation.py  mps.py  multiqubit.py  openpulse_export.py  parametric.py  profiles.py  rb.py  rl.py  scheduling.py  validate.py  viz.py
tests/: test_benchmark.py  test_bo.py  test_braket_bridge.py  test_calibration.py  test_checkpointing.py  test_collision.py  test_colored_noise.py  test_compression.py  test_coupler_elimination.py  test_coupler_in_loop.py  test_cross_check_mutation.py  test_crossresonance.py  test_cz_durations.py  test_dependency_graph.py  test_diagnostics.py  test_distortion.py  test_dlp.py  test_dlp_integration.py  test_echo_cr.py  test_filter_function.py  test_filter_in_loop.py  test_hardware.py  test_headtohead.py  test_import_hygiene.py  test_integration.py  test_iq_export.py  test_irb_resolution.py  test_levels.py  test_liouville.py  test_literature.py  test_machine_precision.py  test_microscheduler.py  test_mitigation.py  test_modes.py  test_mps.py  test_multiqubit.py  test_noisy_calibration.py  test_optimizer_guards.py  test_rb.py  test_reproducibility.py  (+11 more)
tests/fixtures/: reference_cz_pulse.json  reference_cz_pulse.npy
